there was an error in the css that was preventing the line breaks in code snippets re #29

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -202,8 +202,7 @@ pre, code {
     border-radius: 0.250em;
     overflow-x: auto;
     padding: 0.125em 0.250em;
-    white-space: pre;
-    white-space: no-wrap;
+    white-space: nowrap;
 
 }
 
